--- a/C++ Code/CMakeLists.txt
+++ b/C++ Code/CMakeLists.txt
@@ -4,7 +4,7 @@ project(LearnOpenGL)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(${PROJECT_NAME} main.cpp glad.c Visualizer.cpp)
+add_executable(${PROJECT_NAME} main.cpp glad.c Visualizer.cpp Particle.cpp BruteForce.cpp)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     # This line is for GLAD and KHR
