--- a/C++ Code/Makefile
+++ b/C++ Code/Makefile
@@ -8,6 +8,7 @@ OBJECTS = main.o Particle.o Visualizer.o BruteForce.o glad.o
 Simulation: main.o Particle.o Visualizer.o BruteForce.o glad.o
 	@$(CC) $(CFLAGS) -o $(EXEC) $(OBJECTS) -L./build/src -lglfw3 -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo
 	@rm -f $(OBJECTS)
+	@./$(EXEC)
 
 main.o: main.cpp Particle.h BruteForce.h Visualizer.h
 	@$(CC) $(CFLAGS) -c main.cpp
